--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -347,7 +347,7 @@ button{
     text-overflow: ellipsis;
 }
 
-.selected, .play_again:hover, .option_button:hover, .info_wrapper:hover{
+.selected, .play_again:hover, .option_button:hover, .info_wrapper:hover, .hoverable:hover{
     cursor: pointer;
     background: rgba(0, 200, 110, 1);
 }
@@ -374,6 +374,8 @@ button{
 }
 
 .option_wrapper{
+    border-radius: 10px 10px 10px 10px;
+    /* justify-content:space-around; */
     height: 50%;
     width: 100%;
     display: flex;
@@ -381,8 +383,10 @@ button{
 }
 
 .option_button{
+    /* background-color: rgb(98, 95, 95, 1); */
     width: 50%;
-    border-radius: 15%;
+    /* border-radius: 20%; */
+    border-radius: 10px 10px 10px 10px;
     font-family: Verdana, Arial, Helvetica, sans-serif;
     font-style: bold;
     font-size: 1.1em;
@@ -402,6 +406,36 @@ button{
     font-size: 0.8em;
     justify-content: center;
     align-items: center;
+}
+
+
+.form{
+    margin-top: 0;
+    padding-top: 0;
+
+    background-color: orange;
+    border-color: aqua;
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
+}
+
+input[type="number"] {
+    width: 100%;
+    height: 100%;
+    /* display: flex; */
+    /* padding: 10px; */
+    font-size: 16px;
+    /* color: #000; */
+    border-radius: 10px 10px 10px 10px;
+    background: rgb(108, 105, 105);
+}
+
+input::placeholder {
+    color: black;
+    font-family: Verdana, Arial, Helvetica, sans-serif;
+    font-style: bold;
+    font-size: .9em;
 }
 
 
